# hydrus

./: .gitignore  .python-version  404.html  CONTRIBUTING.md  Fixing_Hydrus_Random_Crashes_Under_Linux.html  PTR.html  README.md  Understanding_Database_Synchronization.html  about_docs.html  access_keys.html  adding_new_downloaders.html  advanced.html  advanced_duplicates_auto_resolution.html  advanced_multiple_local_file_services.html  advanced_parents.html  advanced_siblings.html  advanced_sidecars.html  after_disaster.html  changelog.html  client_api.html  contact.html  custom_assets.html  database_merging.html  database_migration.html  developer_api.html  docker.html  downloader_completion.html  downloader_gugs.html  downloader_intro.html  downloader_login.html  downloader_parsers.html  downloader_parsers_content_parsers.html  downloader_parsers_formulae.html  downloader_parsers_full_example_api.html  downloader_parsers_full_example_file_page.html  downloader_parsers_full_example_gallery_page.html  downloader_parsers_page_parsers.html  downloader_sharing.html  downloader_url_classes.html  duplicates.html  (+43 more)
.github/: pin_actions.py
.github/workflows/: docker_build.yml  publish_docs.yml  release_linux.yml  release_win.yml
docs/: about_docs.md  adding_new_downloaders.md  changelog.md  client_api.md  database_migration.md  developer_api.md  getting_started_downloading.md  getting_started_import_options.md  getting_started_installing.md  getting_started_searching.md  getting_started_subscriptions.md  help_I_had_a_file_identifier_missing_error.md  help_my_client_will_not_boot.md  help_my_db_disappeared.md  help_my_db_is_broke.md  help_my_db_is_the_wrong_granularity.md  help_my_media_files_are_broke.md  help_my_media_folders_are_broke.md  help_my_mpv_crashes_with_unusual_audio.md  how_to_see_inside_the_db.md  introduction.md  launch_arguments.md  old_changelog.html  running_from_source.md  wine.md
hydrus/: hydrus_client_boot.py  hydrus_server_boot.py  hydrus_test_boot.py
hydrus/client/: ClientAPI.py  ClientApplicationCommand.py  ClientConstants.py  ClientController.py  ClientDB.py  ClientDaemons.py  ClientDefaults.py  ClientDownloading.py  ClientOptions.py  ClientPDFHandling.py  ClientRendering.py  ClientServices.py
hydrus/core/: HydrusConstants.py  HydrusController.py  HydrusDB.py  HydrusDBModule.py  HydrusDBPopulateCache.py  HydrusData.py  HydrusExceptions.py  HydrusFileHandling.py  HydrusGlobals.py  HydrusLogger.py  HydrusNumbers.py  HydrusPaths.py  HydrusPubSub.py  HydrusSerialisable.py  HydrusStaticDir.py  HydrusTagArchive.py
hydrus/server/: ServerController.py
hydrus/test/: TestClientAPI.py  TestClientDB.py  TestClientDBDuplicates.py  TestClientDBDuplicatesAutoResolution.py  TestClientDBTags.py  TestClientMigration.py  (+8 more)
search/: search_index.json
static/: io.github.hydrusnetwork.hydrus.desktop
(+205 files in other folders)
