# For pip, install like this:
#   pip install .
# For uv, just do, as normal:
#   uv sync

[project]
name = "hydrus"
version = "v677"
description = "A personal booru-style media tagger"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "beautifulsoup4<=4.14.3",
    "cbor2<=6.1.1",
    "chardet<=7.4.3",
    "cryptography<=48.0.0",
    "html5lib<=1.1",
    "lxml<=6.1.1",
    "lz4<=4.4.5",
    "olefile<=0.47",
    "pillow<=12.2.0",
    "pillow-heif<=1.3.0",
    "pillow-jxl-plugin<=1.3.7",
    "psutil<=7.2.2",
    "pympler<=1.1",
    "pyopenssl<=26.2.0",
    "pysocks<=1.7.1",
    "python-dateutil<=2.9.0.post0",
    "pyyaml<=6.0.3",
    "send2trash<=2.1.0",
    "service-identity<=24.2.0",
    "show-in-file-manager<=1.1.6",
    "twisted[http2,tls]<=26.4.0",
    "mpv==1.0.8",
    'opencv-python-headless==4.12.0.88',
    'numpy<=2.3.1',
    "dateparser==1.4.0",
    "tldextract==5.3.1",
    "requests==2.33.1",
    "pyside6==6.9.3",
    "qtpy==2.4.3",
    "pyobjc-core<=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa<=12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-quartz<=12.1 ; sys_platform == 'darwin'",
    "pywin32<=311 ; sys_platform == 'win32'",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hydrus*"]
